// Copyright 2023-2025 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

package buf.validate.conformance.cases;

import "buf/validate/validate.proto";

message GroupOptional {
  optional group Optional = 1 {
    optional string value = 1 [(buf.validate.field).string.const = "foo"];
  }
}

message GroupRepeated {
  repeated group Repeated = 1 {
    optional int32 value = 1 [(buf.validate.field).int32.gt = 0];
  }
}

message GroupRequired {
  required group Required = 1 {
    optional bool value = 1 [(buf.validate.field).bool.const = true];
  }
}

message GroupCustom {
  optional group Custom = 1 {
    option (buf.validate.message).cel = {
      id: "group.custom.div"
      message: "value must be divisible by div"
      expression: "this.value % this.div == 0"
    };
    optional int32 value = 1;
    optional int32 div = 2;
  }
}
